refactor: add result List<String> to print it